texi2html/test/invalid/res/texi_macro_call_not_closed/macro_call_not_closed.texi
\input texinfo @c -*-texinfo-*-


@node Top

after end macro



